[package]
name = "pumpfun"
version = "3.0.1"
edition = "2021"
authors = ["Rapheal Bamidele <nhuxhr@gmail.com>"]
repository = "https://github.com/nhuxhr/pumpfun-rs"
description = "Rust SDK to interact with the Pump.fun Solana program."
license = "MIT OR Apache-2.0"
keywords = ["solana", "memecoins", "pumpfun", "cpi", "sdk"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anchor-client = { version = "0.29.0", features = ["async"] }
anchor-spl = "0.29.0"
borsh = { version = "1.5.3", features = ["derive"] }
isahc = "1.7.2"
mpl-token-metadata = "5.1.0"
pumpfun-cpi = { path = "../pumpfun-cpi", version = "1.1.1" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
solana-sdk = "<1.17.0"
tokio = "1.41.1"
spl-associated-token-account = { version = "2.2.0", features = [
    "no-entrypoint",
] }